# 100-exercises-to-learn-rust

./: .gitignore  Cargo.toml
book/src/: SUMMARY.md  going_further.md
book/src/01_intro/: 00_welcome.md  01_syntax.md
book/src/02_basic_calculator/: 00_intro.md  01_integers.md  02_variables.md  03_if_else.md  04_panics.md  05_factorial.md  06_while.md  07_for.md  08_overflow.md  09_saturating.md  10_as_casting.md
book/src/03_ticket_v1/: 00_intro.md  01_struct.md  02_validation.md  03_modules.md  04_visibility.md  05_encapsulation.md  06_ownership.md  07_setters.md  08_stack.md  09_heap.md  10_references_in_memory.md  11_destructor.md  12_outro.md
book/src/04_traits/: 00_intro.md  01_trait.md  02_orphan_rule.md  03_operator_overloading.md  04_derive.md  05_trait_bounds.md  06_str_slice.md  07_deref.md  08_sized.md  09_from.md  10_assoc_vs_generic.md  11_clone.md  12_copy.md  13_drop.md  14_outro.md
book/src/05_ticket_v2/: 00_intro.md  01_enum.md  02_match.md  03_variants_with_data.md  04_if_let.md  05_nullability.md  06_fallibility.md  07_unwrap.md  08_error_enums.md  (+7 more)
exercises/08_futures/08_outro/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.bat  run.ps1  tauri.conf.json
exercises/08_futures/08_outro/capabilities/: default.json
exercises/08_futures/08_outro/src/: handlers.rs  lib.rs  main.rs  model.rs  state.rs
exercises/08_futures/08_outro/web/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
exercises/08_futures/08_outro/web/src/: App.vue  style.css  ticket.ts
(+149 files in other folders)
